Bug#38075: Wrong result: rows matching a subquery with outer join not returned

The problem is that duplicate weedout handling in evaluate_join_record() is
incompatible with outer-join condition handling.
Duplicate weedout checked only the initial predicate, but not the conditional predicates.
Hence, all the row combinations involving the first row of the innermost
table that qualified according to the initial predicate would be candidates
for duplicate elimination. This prevented all row combinations where the
first row to qualify from the innermost table was not the first row where the
initial predicate evaluated to true.
Here, "initial predicate" refers to join_tab->select_cond and "conditional
predicates" refers to select_cond of "unmatched" join_tabs.
  
Solved by considering the "found" boolean when performing duplicate elimination.
Notice also that duplicate elimination now sets "found" instead of exiting
from routine. This ensures correct book-keeping of e.g examined_rows.
  
The fix also eliminates one boolean local variable and adds a function header.
  
mysql-test/r/subselect_sj2.result
  Added test result for bug#38075.
mysql-test/r/subselect_sj2_jcl6.result
  Added test result for bug#38075.
mysql-test/t/subselect_sj2.test
  Added test for bug#38075.
sql/sql_select.cc
  Considers outer-join condition before executing duplicate elimination code.
  Eliminated a boolean variable (select_cond_result).
  Added Doxygen style function header for evaluate_join_record().

original revid: -c3719.1.70